@@ -1,4 +1,4 @@
 DIST bwping-1.0.tar.gz 74312 RMD160 b7d8ac6326704dfd80c8d50341b70b083a1ea704 SHA1 e6f46b8c0f0a13dc6e1843040325a8f712dbf816 SHA256 9b4eaea67003886c98c58ed79972e4794e987c7f356cb9f8c77bf9159830d17b
 EBUILD bwping-1.0.ebuild 525 RMD160 ec538cfe6eb5702146a6fa022f86b6c2d9e3f674 SHA1 c323103a9506cef3a439e5f088966d79aed7e2d4 SHA256 665fe46b0c970a91a2f541f834adb889a20ce07fa6deff7e7cd75bf20dfd9789
-MISC ChangeLog 262 RMD160 36791ce5fbcf2b27a42410bc2c1104bb00c9bc10 SHA1 b686b1ae3b470bb3fd1402a683f172024d2b960b SHA256 a758758ffea35f912017d0df11b103cb1abe77b1c4e5df331932949f9a17e5fe
-MISC metadata.xml 433 RMD160 e869f0765dedb394bed32593485de4979ae71a67 SHA1 18930a1d3ccb7073c46d38c3ff621e785dd58caa SHA256 cae6ad302a0b31a3445b3430141dc60376df10567a3213f49415cbe2f8d0275a
+MISC ChangeLog 441 RMD160 aaa5829cf0901274ca5a92c9bd3fc32c713cd7f5 SHA1 e59b5c73a8214b79fc27fdbfd41214624cf8d02c SHA256 19e28c9993566d85f618782d8584cecf1296469bc8517eee7b7c81eb79e81c9a
+MISC metadata.xml 359 RMD160 763e846260cb1fa8d3467e1e68cb14125011fdc7 SHA1 17099bbe7d052dfe6beb28c72c9ce9766439d8ea SHA256 6349ada9576cab04926e7079c94b8f1f3228dce008086358c2e4b75e68a2cd94
