@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Sep 2008; Peter Volkov <pva@gentoo.org> metadata.xml:
+  Fixing metadata.xml to follow sunrise specifications: herd should be
+  maintainer-wanted and no maintainer required.
+
   02 Sep 2008; Oleg Derevenetz (OlegD) <oleg@vsi.ru> +bwping-1.0.ebuild,
   +metadata.xml:
   New Ebuild for bug 236231 thanks to Peter Volkov
